--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,226 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+:root{
+  --color-dark0 : #40191C;
+ --color-dark1 : #662549;
+ --color-dark2 : #AE445A;
+ --color-dark3 : #F39F5A;
+ --color-dark4 : #E8BCB9;
+ --color-light1 : #F1EAFF ;
+ --color-light2 : #E5D4FF ;
+ --color-light3 : #DCBFFF ;
+ --color-light4 : #D0A2F7 ;
+ --color-lighttext : rgb(34, 5, 141);
+}
+
+.cat{
+  display: flex;
+  gap: 1rem;
+  margin-top: 2rem;
+  margin-left: 1rem;
+  margin-right: 0rem;
+}
+.catcard-div{
+  /* background-image: url('./college.jpg'); */
+  /* height: 15rem;
+  width: 30rem;
+  border: 2px solid black;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: end;
+  border-radius: 1rem; */
+  position: relative;
+max-width: 29.8rem;
+max-height: 19rem;
+overflow: hidden;
+margin: 1rem;
+  resize: both;
+}
+.cat-text{
+  /* text-align: center;
+  width: 100%; */
+  backdrop-filter: blur(1px);
+  position: absolute;
+bottom: 0%;
+left: 0%;
+text-align: center;
+}
+.cat-img{
+  /* width: 100%;
+  height: 100%;
+  object-fit: cover; */
+  width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+.app-div{
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(3,1fr);
+  /* display: flex;
+  flex-flow: row; */
+}
+
+/* navbar */
+nav{
+  background-color: #252525;
+  display: flex;
+  justify-content: space-between;
+  /* min-height: 30%; */
+}
+.themeDiv{
+  display: flex;
+}
+.buttonTheme{
+height: 100%;
+margin: 0;
+width: 2rem;
+border-radius: 0rem;
+cursor: pointer;
+}
+#dark{
+background-color: hsl(234, 17%, 12%);
+}
+#light{
+background-color: rgb(250, 237, 237);
+}
+
+
+#redirect{
+  display: flex;
+  /* gap: 1rem; */
+  margin-right: 2.5rem;
+  margin-bottom: 0rem;
+  
+}
+#redirect li {
+  /* background-color: var(--color-yellow); */
+  color: var(--color-green);
+  /* border-radius: 0.9rem; */
+ cursor: pointer;
+ list-style: none;
+
+}
+#redirect li:nth-child(1){
+ 
+  padding: 1rem 1rem;
+}
+#redirect li:nth-child(2){
+  background-color: var(--color-dark1);
+  padding: 1rem;
+}
+
+#redirect li:nth-child(3){
+  background-color: var(--color-dark2);
+  padding: 1rem;
+}
+
+#redirect li:nth-child(4){
+  background-color: var(--color-dark3);
+  padding: 1rem;
+}
+
+
+#redirect li:nth-child(n+2):hover{
+  background-color: var(--color-dark4);
+}
+
+
+#redirect li a{
+  text-decoration: none;
+}
+
+.Icon{
+  color : white;
+  font-size: 2rem;
+ 
+}
+/* button */
+.button-div{
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 1rem;
+  
+}
+
+@media (min-width:0px) and (max-width:1494px){
+  .app-div{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    /* display: flex;
+    flex-flow: row; */
+  }
+}
+
+@media (min-width:0px) and (max-width:992px){
+  .app-div{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    /* display: flex;
+    flex-flow: row; */
+  }
+}
+
+/* select div */ 
+.select-div{
+  margin:0 0.1rem;
+  margin-bottom: 1rem ;
+  margin-top: 5rem;
+
+}
+
+select{
+  font-size: 1.5rem;
+}
+
+/* Footer section */
+#footer{
+  height: 18rem;
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+  }
+  .footer-1{
+   height: 80%;
+   background-color: var(--color-green2);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+  color: var(--color-lighttext);
+  }
+  .footer-2{
+      height: 20%;
+      color: white;
+      background-color: black;
+      letter-spacing: 0.2rem;
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+      align-items: center;
+  }
+  
+  #footer-ul{
+      display: flex;
+      list-style: none;
+      gap: 3.5rem;
+      padding-left: 0;
+  }
+  .Icon:hover{
+      font-size: 1.8rem;
+  }
+  #footer-11{
+      margin-top: 1.5rem;
+     letter-spacing: 0.2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+
+
+
